<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_map"
      android:icon="@drawable/ic_map"
      android:title="@string/title_toolbar_map" />
    <item
      android:id="@+id/nav_all_parking"
      android:icon="@drawable/ic_menu_all_parking"
      android:title="@string/title_toolbar_all" />
    <item
      android:id="@+id/nav_free_parking"
      android:icon="@drawable/ic_menu_all_parking"
      android:title="@string/title_toolbar_search" />
    <item
      android:id="@+id/nav_history"
      android:icon="@drawable/ic_history"
      android:title="@string/title_toolbar_history" />
  </group>

  <item android:title="">
    <menu>
      <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_menu_about"
        android:title="@string/title_toolbar_about" />
    </menu>
  </item>

</menu>